--- a/.project
+++ b/.project
@@ -7,5 +7,6 @@
 	<buildSpec>
 	</buildSpec>
 	<natures>
-	</natures>
+      <nature>org.eclipse.jdt.core.javanature</nature>
+</natures>
 </projectDescription>
